add delta limit to prevent simple changes

--- a/config.json.template
+++ b/config.json.template
@@ -20,6 +20,7 @@
           "156.33.0.0/16"
         ]
       },
+      "delta": 10,
       "throttle": false,
       "namespaces": ["article", "file", "media", "main"],
       "whitelist": {
@@ -33,5 +34,3 @@
     }
   ]
 }
-
-
